--- a/SocietieApp/Web.config
+++ b/SocietieApp/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-SocietieApp-20150606011931.mdf;Initial Catalog=aspnet-SocietieApp-20150606011931;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="SocietyConnection" connectionString="Data Source=SATHEESH-PC;Initial Catalog=eApartment;Integrated Security=False;User ID=sa;Password=password2" providerName="System.Data.SqlClient" />
+    <add name="SocietyEntities" connectionString="metadata=res://*/Models.eApartment.csdl|res://*/Models.eApartment.ssdl|res://*/Models.eApartment.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SATHEESH-PC;initial catalog=eApartment;persist security info=True;user id=sa;password=password2;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -19,6 +19,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off" defaultRedirect="~/Error">
+      <error redirect="~/Error/NotFound" statusCode="404" />
+    </customErrors>
+    
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
@@ -50,7 +54,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
